code refactor and added some feature

--- a/index.html
+++ b/index.html
@@ -8,27 +8,31 @@
         <main>
             <div id="main-container">
                 <div id="cals">
-                    <div id="screen"><input id="screen-input" dir="rtl" value="" type="number"></div>
-                    <div class="keys"><label>AC</label></div>
-                    <div class="keys"><label>C</label></div>
-                    <div class="keys"><label>%</label></div>
-                    <div class="keys"><label>/</label></div>
-                    <div class="keys"><label>7</label></div>
-                    <div class="keys"><label>8</label></div>
-                    <div class="keys"><label>9</label></div>
-                    <div class="keys"><label>*</label></div>
-                    <div class="keys"><label>4</label></div>
-                    <div class="keys"><label>5</label></div>
-                    <div class="keys"><label>6</label></div>
-                    <div class="keys"><label>-</label></div>
-                    <div class="keys"><label>1</label></div>
-                    <div class="keys"><label>2</label></div>
-                    <div class="keys"><label>3</label></div>
-                    <div class="keys"><label>+</label></div>
+                    <div id="screen"></div>
+                    <div class="keys clear"><label>AC</label></div>
+                    <div class="keys backspace"><label>C</label></div>
+                    <div class="keys percentage"><label>%</label></div>
+                    <div class="keys operator"><label>/</label></div>
+
+                    <div class="keys operand"><label>7</label></div>
+                    <div class="keys operand"><label>8</label></div>
+                    <div class="keys operand"><label>9</label></div>
+                    <div class="keys operator"><label>*</label></div>
+
+                    <div class="keys operand"><label>4</label></div>
+                    <div class="keys operand"><label>5</label></div>
+                    <div class="keys operand"><label>6</label></div>
+                    <div class="keys operator"><label>-</label></div>
+
+                    <div class="keys operand"><label>1</label></div>
+                    <div class="keys operand"><label>2</label></div>
+                    <div class="keys operand"><label>3</label></div>
+                    <div class="keys operator"><label>+</label></div>
+
                     <div class="keys"><label>.</label></div>
-                    <div class="keys"><label>0</label></div>
+                    <div class="keys operand"><label>0</label></div>
                     <div class="keys"><label>()</label></div>
-                    <div class="keys"><label>=</label></div>
+                    <div class="keys equals"><label>=</label></div>
                 </div>
             </div>
         </main>
