some style changes

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
             <div id="main-container">
                 <div id="cals">
                     <div id="screen"></div>
-                    <div class="keys clear"><label>AC</label></div>
-                    <div class="keys backspace"><label>C</label></div>
-                    <div class="keys percentage"><label>%</label></div>
+                    <div class="keys clear grey"><label>AC</label></div>
+                    <div class="keys backspace grey"><label>C</label></div>
+                    <div class="keys percentage grey"><label>%</label></div>
                     <div class="keys operator"><label>/</label></div>
 
                     <div class="keys operand"><label>7</label></div>
@@ -29,10 +29,10 @@
                     <div class="keys operand"><label>3</label></div>
                     <div class="keys operator"><label>+</label></div>
 
-                    <div class="keys"><label>.</label></div>
+                    <div class="keys grey"><label>.</label></div>
                     <div class="keys operand"><label>0</label></div>
-                    <div class="keys"><label>()</label></div>
-                    <div class="keys equals"><label>=</label></div>
+                    <div class="keys grey"><label>()</label></div>
+                    <div class="keys equals grey"><label>=</label></div>
                 </div>
             </div>
         </main>
