added dot feature

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <div class="keys operand"><label>3</label></div>
                     <div class="keys operator"><label>+</label></div>
 
-                    <div class="keys grey"><label>.</label></div>
+                    <div class="keys dot grey"><label>.</label></div>
                     <div class="keys operand"><label>0</label></div>
                     <div class="keys grey"><label>()</label></div>
                     <div class="keys equals grey"><label>=</label></div>
